--- a/src/MVC/Vistas/Secretaria/FrmAdministrar.form
+++ b/src/MVC/Vistas/Secretaria/FrmAdministrar.form
@@ -567,14 +567,14 @@
 
           <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
           <SubComponents>
-            <Component class="javax.swing.JTable" name="tablaOficial">
+            <Component class="javax.swing.JTable" name="tablaSecretarias">
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                   <Table columnCount="4" rowCount="4">
-                    <Column editable="false" title="Carnet" type="java.lang.Object"/>
-                    <Column editable="false" title="IdPersona" type="java.lang.Object"/>
-                    <Column editable="false" title="Nombre de usuario" type="java.lang.Object"/>
-                    <Column editable="false" title="Salario" type="java.lang.Object"/>
+                    <Column editable="false" title="Id Secretaria" type="java.lang.Object"/>
+                    <Column editable="false" title="IdUsuario" type="java.lang.Object"/>
+                    <Column editable="false" title="Nombre" type="java.lang.Object"/>
+                    <Column editable="false" title="Contrase&#xf1;a" type="java.lang.Object"/>
                   </Table>
                 </Property>
                 <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
