--- a/src/MVC/Vistas/Secretaria/FrmRegistroSecretaria2.form
+++ b/src/MVC/Vistas/Secretaria/FrmRegistroSecretaria2.form
@@ -64,7 +64,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Roboto Black" size="24" style="1"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="REGISTRO OFICIALES"/>
+            <Property name="text" type="java.lang.String" value="REGISTRO SECRETARIA"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
