--- a/src/MVC/Vistas/Clientes/FrmClientes.form
+++ b/src/MVC/Vistas/Clientes/FrmClientes.form
@@ -334,7 +334,7 @@
           <Layout>
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="crearBtnTxt" alignment="0" pref="430" max="32767" attributes="0"/>
+                  <Component id="crearBtnTxt" alignment="1" pref="430" max="32767" attributes="0"/>
               </Group>
             </DimensionLayout>
             <DimensionLayout dim="1">
@@ -422,6 +422,9 @@
               <Color blue="be" green="86" red="0" type="rgb"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="crearBtn1MouseClicked"/>
+          </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="60" y="360" width="-1" height="-1"/>
