Trabaje en FRAME

--- a/src/MVC/Vistas/Oficiales/FrmLoginOficiales.form
+++ b/src/MVC/Vistas/Oficiales/FrmLoginOficiales.form
@@ -375,6 +375,9 @@
               <Color blue="be" green="86" red="0" type="rgb"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="iniciarSesionBtnMouseClicked"/>
+          </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="50" y="400" width="130" height="40"/>
